--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="mains">
       <div class="first">
-        <img src="/assets/images/image-web-3-desktop.jpg" alt="imgweb3" width="300px">
+        <img src="./assets/images/image-web-3-desktop.jpg" alt="imgweb3" width="300px">
         <!-- <div class="words"> -->
           <h1>The Bright <br> Future of <br> Web 3.0?</h1>
           <div class="seperator">
@@ -53,19 +53,19 @@
   </div>
 <div class="lastone">
   <div class="card">
-    <img src="/assets/images/image-retro-pcs.jpg" alt="">
+    <img src="./assets/images/image-retro-pcs.jpg" alt="">
     <span>01</span>
     <h5>Reviving Retro PCs</h5>
     <p>What happens when old PCs are given modern upgrades?</p>
   </div>
   <div class="card" id="here">
-    <img src="/assets/images/image-top-laptops.jpg" alt="">
+    <img src="./assets/images/image-top-laptops.jpg" alt="">
     <span>02</span>
     <h5>Top 10 Laptops of 2022</h5>
     <p>Our best picks for various needs and budgets.</p>
   </div>
   <div class="card" id="there">
-    <img src="/assets/images/image-gaming-growth.jpg" alt="">
+    <img src="./assets/images/image-gaming-growth.jpg" alt="">
     <span>03</span>
     <h5>The Growth of Gaming</h5>
     <p>How the pandemic has sparked fresh </p>
